= Changelog
:url-repo: https://gitlab.com/antora/antora-lunr-extension

This document provides a summary of all notable changes to this project grouped by release.
For a detailed view of what's changed, refer to the {url-repo}/commits[commit history] of this project.

== Unreleased

=== Added

* Initial rerelease of Antora Lunr integration as an Antora extension

=== Changed

* Move lib/extension.js to lib/index.js (#6)
* Configure package exports to both limit what files can be required and to define a require API (#6)
* Change license from MIT to MPL-2.0