@@ -9,10 +9,8 @@ const generateIndex = require('./generate-index')
  *
  * @module lunr-extension
  */
-function register (pipeline, {
-  config: { indexLatestOnly, languages, ...extraArguments }
-}) {
-  const logger = pipeline.require('@antora/logger').get(packageName)
+function register ({ config: { indexLatestOnly, languages, ...extraArguments } }) {
+  const logger = this.getLogger(packageName)
 
   if (Object.keys(extraArguments).length > 0) {
     const args = Object.keys(extraArguments)
@@ -21,7 +19,7 @@ function register (pipeline, {
     throw new Error(`Remove unrecognized extension option(s) for ${packageName}: ${args}`)
   }
 
-  pipeline.on('beforePublish', ({ playbook, siteCatalog, contentCatalog }) => {
+  this.on('beforePublish', ({ playbook, siteCatalog, contentCatalog }) => {
     const index = generateIndex(playbook, contentCatalog, {
       indexLatestOnly,
       languages
